--- a/dev2.ipynb
+++ b/dev2.ipynb
@@ -1117,14 +1117,11 @@
     "while True:\n",
     "    frame = cv2.imread(os.path.join('resized_pen', np.random.choice(listdir('resized_pen/'))))\n",
     "    frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)    # makes the blues image look real colored\n",
-    "#     webcam_preview.set_data(frame)\n",
-    "#     plt.draw()\n",
     "\n",
-    "    plt.imshow(frame)\n",
-    "    \n",
+    "    plt.imshow(frame)    \n",
     "    display.clear_output(wait=True)\n",
     "\n",
-    "    plt.pause(0.1)    # the pause time is = 1 / framerate"
+    "    plt.pause(0.1)"
    ]
   },
   {
