--- a/picamera.ipynb
+++ b/picamera.ipynb
@@ -39,64 +39,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: Do not use the development server in a production environment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)\n",
-      "192.168.0.9 - - [29/Nov/2018 19:19:07] \"GET /get_image HTTP/1.1\" 200 -\n",
-      "192.168.0.111 - - [29/Nov/2018 19:19:15] \"GET /get_image HTTP/1.1\" 200 -\n",
-      "192.168.0.111 - - [29/Nov/2018 19:19:27] \"GET /get_image HTTP/1.1\" 200 -\n",
-      "192.168.0.9 - - [29/Nov/2018 19:20:10] \"GET /get_image HTTP/1.1\" 200 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from flask import Flask, send_file, request\n",
-    "import picamera\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from IPython import display\n",
+    "import os\n",
     "import time\n",
+    "import numpy as np\n",
+    "import picamera\n",
     "\n",
-    "app = Flask(__name__)\n",
-    "coeff = 3\n",
-    "resol = (720 // coeff, 480 // coeff)\n",
-    "\n",
-    "\n",
-    "def make_photo(filename):\n",
-    "    with picamera.PiCamera() as camera:\n",
-    "        camera.resolution = resol\n",
-    "        camera.start_preview()\n",
-    "        time.sleep(1)\n",
-    "        camera.capture(filename)\n",
-    "\n",
-    "\n",
-    "@app.route('/')\n",
-    "def hello_world():\n",
-    "    return 'Hello, World!'\n",
-    "\n",
-    "\n",
-    "@app.route('/get_image')\n",
-    "def get_image():\n",
-    "    filename = '/home/pi/image.jpeg'\n",
-    "    make_photo(filename)\n",
-    "    return send_file(filename, mimetype='image/jpeg')\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    app.run(host='0.0.0.0', port=5000)"
+    "with picamera.PiCamera() as camera:\n",
+    "    camera.resolution = (320, 240)\n",
+    "    camera.framerate = 24\n",
+    "    while True:\n",
+    "        time.sleep(0.1)\n",
+    "        output = np.empty((240, 320, 3), dtype=np.uint8)\n",
+    "        camera.capture(output, 'rgb')\n",
+    "        \n",
+    "        plt.imshow(output)\n",
+    "        display.clear_output(wait=True)\n",
+    "        plt.pause(0.1)    # the pause time is = 1 / framerate"
    ]
   }
  ],
@@ -105,6 +71,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
